<resources>
    <string name="app_name">AliceAndroidERestaurant</string>

    <string name="entrée">Entrées</string>
    <string name="plat">Plats</string>
    <string name="dessert">Desserts</string>
    <string name="ble">Bluetooth</string>

    <string name="catégorie">Catégorie</string>
    <string name="read">Lecture</string>
    <string name="write">Ecriture</string>

    <string-array name="Plats">

    </string-array>


    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="ajoue">Ajouter au panier</string>


    <string name="ble_scan_play">Lancer le scan</string>
    <string name="ble_scan_pause">Scan BLE en cours …</string>
    <string name="ble_scan_error">Erreur Scan BLE</string>
    <string name="ble_device_disconnected">Statut : déconnecté</string>
    <string name="ble_device_connnected">Statut : connecté</string>
    <string name="ble_device_write_characteristic_title">Caractéristique :</string>
    <string name="ble_device_write_characteristic_confirm">Confirmation</string>
    <string name="ble_device_write_characteristic_cancel">Annulation</string>

    <string name="commander">Commander</string>
    <string name="price">Prix</string>
    <string name="total">Total</string>

    <string name="euro">€</string>
    <string name="com">com</string>

    <string name="sup">X</string>
    <string name="quantity">Quantité</string>




</resources>