<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/green"
        android:bufferType="normal"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailSlider"
        tools:text="Titre plat" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/detailSlider"
        android:layout_width="404dp"
        android:layout_height="336dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ajoue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonMoins"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2E2C2B"
        android:text="@string/moins"
        app:layout_constraintStart_toStartOf="@+id/buttonAjouter"
        app:layout_constraintTop_toBottomOf="@+id/detailIngredient" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#2E2C2B"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/buttonAjouter"
        app:layout_constraintTop_toTopOf="@+id/buttonMoins" />

    <TextView
        android:id="@+id/detailIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginTop="100dp"
        android:text="TextView"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailSlider"
        tools:text="detail ingredient" />

    <TextView
        android:id="@+id/detailQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/buttonMoins"
        app:layout_constraintTop_toBottomOf="@+id/detailIngredient"/>

    <TextView
        android:id="@+id/detailTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/buttonAjouter"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"
        app:layout_constraintStart_toStartOf="@+id/buttonMoins"
        app:layout_constraintTop_toBottomOf="@+id/detailQuantity"
        tools:text="Total = " />

</androidx.constraintlayout.widget.ConstraintLayout>